--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "String validation",
   "homepage": "https://github.com/ueumd/sav-validator",
-  "main": "dist/validator.js",
+  "main": "dist/validator.esm.js",
   "scripts": {
     "build": "rollup -c"
   },
