--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ deploy:
   email: 51134642@qq.com
   skip_cleanup: true
   api_key:
-    secure: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
+    secure: "$API_KEY"
