--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,3 +19,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - name: Build
         run: npm run build
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
