--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,23 +1,12 @@
-name: Node.js Package
+name: Release
 on:
   push:
     branches:
       - master
 jobs:
-  publish-npm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,10 +18,6 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: npm ci
-
-      - name: Build
-        run: npm run build
-
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
