--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "validation",
     "validate"
   ],
+  "files": [
+    "dist"
+  ],
   "author": "ueumd",
   "license": "MIT",
   "dependencies": {},
