--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,5 +22,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        - run: npm install
-        - run: npm run build
+          run: npm install && npm run build
