--- a/package.json
+++ b/package.json
@@ -27,11 +27,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
     "rollup": "^2.52.3",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "semantic-release": "^17.4.4"
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
