--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Get version
         run: echo "TAG_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: build
-        run: npm run build
+        run: npm install && npm run build
         env:
           TAG_VERSION: ${{env.TAG_VERSION}}
       - name: generate npm token
